--- a/hero-conjurer/templates/feats.html
+++ b/hero-conjurer/templates/feats.html
@@ -1,27 +1,4 @@
-<div id='HC-form'>
-    <form autocomplete='off' class='form'>
-        
-        <!-- Tabs -->
-        <nav id='HC-header'>
-            <a class='tablinks navigate race'>RACE</a>
-            <a class='tablinks navigate class'>CLASS</a>
-            <a class='tablinks navigate abilities'>ABILITIES</a>
-            <a class='tablinks navigate background'>BACKGROUND</a>
-            <a class='tablinks navigate equipment'>EQUIPMENT</a>
-            <a class='tablinks navigate spells'>SPELLS</a>
-            <a class='tablinks navigate feats active'>FEATS</a>
-            <a class='tablinks navigate bio'>BIO</a>
-            <a class='tablinks navigate summary'>SUMMARY</a>
-        </nav>
-        
-        <!-- Tab content -->
-        <div id='HC-content'>
-            <h3 class='tabcontent'>Feats menu</h3>
-        </div>
-
-        <div id='HC-navigate'>
-            <button type='submit' class='navigate prev'>PREVIOUS</button>
-            <button type='submit' class='navigate next'>NEXT</button>
-        </div>
-    </form>
+<div class='feats-tab'>
+    <input type='hidden' name='sheet' id='sheet' value='feats'>
+    <h3 class='tabcontent'>Feats menu</h3>
 </div>
