--- a/hero-conjurer/templates/summary.html
+++ b/hero-conjurer/templates/summary.html
@@ -1,27 +1,4 @@
-<div id='HC-form'>
-    <form autocomplete='off' class='form'>
-        
-        <!-- Tabs -->
-        <div id='HC-header'>
-            <a class='tablinks navigate race'>RACE</a>
-            <a class='tablinks navigate class'>CLASS</a>
-            <a class='tablinks navigate abilities'>ABILITIES</a>
-            <a class='tablinks navigate background'>BACKGROUND</a>
-            <a class='tablinks navigate equipment'>EQUIPMENT</a>
-            <a class='tablinks navigate spells'>SPELLS</a>
-            <a class='tablinks navigate feats'>FEATS</a>
-            <a class='tablinks navigate bio'>BIO</a>
-            <a class='tablinks navigate summary active'>SUMMARY</a>
-        </div>
-        
-        <!-- Tab content -->
-        <div id='HC-content' class='tabcontent'>
-            <p>Summary menu</p>
-        </div>
-
-        <div id='HC-navigate'>
-            <button type='submit' class='navigate prev'>PREVIOUS</button>
-            <button type='submit' class='navigate next'>FINISH</button>
-        </div>
-    </form>
+<div class='summary-tab'>
+    <input type='hidden' name='sheet' id='sheet' value='summary'>
+    <p>Summary menu</p>
 </div>
