--- a/hero-conjurer/css/conjurer.css
+++ b/hero-conjurer/css/conjurer.css
@@ -186,6 +186,13 @@
   overflow: scroll;
 }
 
+#HC-content .spellbook {
+  float: right;
+  width: 50%;
+  height: 40%;
+  display: inline-table;
+}
+
 #HC-content .class-entry {
   margin: auto;
 }
