--- a/hero-conjurer/templates/abilities.html
+++ b/hero-conjurer/templates/abilities.html
@@ -1,43 +1,19 @@
-<div id='HC-form'>
-    <form autocomplete='off' class='form'>
-        <input type='hidden' name='sheet' id='sheet' value='abilities'>
+<div class='abilities-tab'>
+    <input type='hidden' name='sheet' id='sheet' value='abilities'>
 
-        <!-- Tabs -->
-        <nav id='HC-header'>
-            <a class='tablinks navigate race'>RACE</a>
-            <a class='tablinks navigate class'>CLASS</a>
-            <a class='tablinks navigate abilities active'>ABILITIES</a>
-            <a class='tablinks navigate background'>BACKGROUND</a>
-            <a class='tablinks navigate equipment'>EQUIPMENT</a>
-            <a class='tablinks navigate spells'>SPELLS</a>
-            <a class='tablinks navigate feats'>FEATS</a>
-            <a class='tablinks navigate bio'>BIO</a>
-            <a class='tablinks navigate summary'>SUMMARY</a>
-        </nav>
-        
-        <!-- Abilities -->
-        <ul id='HC-abilities'>
-            {{#each data.abilities}}
-                <li class='abilities large'>
-                    <span class="icon square increment"></span>
-                    <div class='abilities small border'>
-                        <h3>{{@key}}</h3>
-                        <input class='score' type="text" value="{{.}}"></input>
-                        <input type='hidden' class='score-hidden' name="{{@key}}" id="{{@key}}" value='{{lookup ../data/abilitiesForm @key}}'>
-                    </div>
-                    <span class="icon square decrement"></span>
-                </li>
-            {{/each}}
-        </ul>
-
-        <!-- Tab content -->
-        <div id='HC-content'>
-            <h3 class='tabcontent'>Points Left: {{pointBuySum data.abilitiesForm}}/27</h3>
-        </div>
-
-        <div id='HC-navigate'>
-            <button type='submit' class='navigate prev'>PREVIOUS</button>
-            <button type='submit' class='navigate next'>NEXT</button>
-        </div>
-    </form>
+    <h3 class='tabcontent'>Points Left: {{pointBuySum data.abilitiesForm}}/27</h3>
+    <ul id='HC-abilities'>
+        {{#each data.abilities}}
+        <li class='abilities large'>
+            <span class="icon square increment"></span>
+            <div class='abilities small border'>
+                <h3>{{@key}}</h3>
+                <input class='score' type="text" value="{{.}}"></input>
+                <input type='hidden' class='score-hidden' name="{{@key}}" id="{{@key}}"
+                    value='{{lookup ../data/abilitiesForm @key}}'>
+            </div>
+            <span class="icon square decrement"></span>
+        </li>
+        {{/each}}
+    </ul>
 </div>
