--- a/hero-conjurer/templates/race.html
+++ b/hero-conjurer/templates/race.html
@@ -1,88 +1,64 @@
-<div id='HC-form'>
-    <form autocomplete='off' class='form'>
-        <input type='hidden' name='sheet' id='sheet' value='race'>
-        
-        <!-- Tabs -->
-        <nav id='HC-header'>
-            <a class='tablinks navigate race active'>RACE</a>
-            <a class='tablinks navigate class'>CLASS</a>
-            <a class='tablinks navigate abilities'>ABILITIES</a>
-            <a class='tablinks navigate background'>BACKGROUND</a>
-            <a class='tablinks navigate equipment'>EQUIPMENT</a>
-            <a class='tablinks navigate spells'>SPELLS</a>
-            <a class='tablinks navigate feats'>FEATS</a>
-            <a class='tablinks navigate bio'>BIO</a>
-            <a class='tablinks navigate summary'>SUMMARY</a>
-        </nav>
+<div id='race-tab'>
+    <input type='hidden' name='sheet' id='sheet' value='race'>
 
-        <!-- Abilities -->
-        <ul id='HC-abilities'>
+    <ul id='HC-abilities'>
 
-            {{#with data.abilities as | ability |}}
-                {{#each ability}}
-                <li class='abilities large'>
-                    <div class='abilities small border'>
-                        <h3 class='score'>{{@key}}</h3>
-                        <p class='score'>{{this}}</p>
-                    </div>
-                </li>
-                {{/each}}
-            {{/with}}
-        </ul>
-        
-        <!-- Tab content -->
-        <div id='HC-content'>
-            <div class='choice-pane'>
-                <!-- Select Race-->
-                <label for='race'>Race:</label>
-                <select class='submit' style='width: 100%; margin: auto;' name='race' id='race'>
-                    <option value='{{data.race.name}}' selected hidden>{{data.race.name}}</option> 
-                    {{#with info.race as | race |}}
-                        {{#each race}}
-                            <option value='{{@key}}'>{{@key}}</option>
-                        {{/each}}
-                    {{/with}}
-                </select>
-
-                {{#if data.race.name}}
-
-                    <!-- Select Subrace-->
-                    {{#if (objectLength data.race.data.subraces)}}
-                        <label for='subrace'>Subrace:</label>
-                        <select class='submit' name='subrace' id='subrace'>
-                            <option value='{{data.race.subrace}}' selected hidden>{{data.race.subrace}}</option> 
-                            {{#with data.race.data.subraces as | subrace |}}
-                                {{#each subrace}}
-                                    <option value='{{@key}}'>{{@key}}</option>
-                                {{/each}}
-                            {{/with}}
-                        </select>
-                    {{/if}}
-
-                    <!--Select Alignment-->
-                    <label for='alignment'>Alignment:</label>
-                    <select class='submit' name='alignment' id='alignment'>
-                        <option value='{{data.race.alignment}}' selected hidden>{{data.race.alignment}}</option> 
-                        {{#with info.alignment as | alignment |}}
-                            {{#each alignment}}
-                                <option value='{{@key}}'>{{@key}}</option>
-                            {{/each}}
-                        {{/with}}
-                    </select>
-
-                    <!-- Race Characteristics-->
-                    <label for='size' name='size' id='size'>Size: {{data.race.size}}</label>
-                    <label for='speed' name='speed' id='speed'>Speed: {{data.race.speed}}</label>
-                    <label for='languages' name='languages' id='languages'>Languages:</label>
-                    {{#each data.race.data.languages}}
-                        <label>{{this}}</label>
-                    {{/each}}
-                {{/if}}
+        {{#with data.abilities as | ability |}}
+        {{#each ability}}
+        <li class='abilities large'>
+            <div class='abilities small border'>
+                <h3 class='score'>{{@key}}</h3>
+                <p class='score'>{{this}}</p>
             </div>
-        </div>
+        </li>
+        {{/each}}
+        {{/with}}
+    </ul>
 
-        <div id='HC-navigate'>
-            <button type='submit' class='navigate next'>NEXT</button>
-        </div>
-    </form>
+    <div class='choice-pane'>
+
+        {{!-- Select Race--}}
+        <label for='race'>Race:</label>
+        <select class='submit' style='width: 100%; margin: auto;' name='race' id='race'>
+            <option value='{{data.race.name}}' selected hidden>{{data.race.name}}</option>
+            {{#each info.race}}
+            <option value='{{@key}}'>{{@key}}</option>
+            {{/each}}
+        </select>
+
+        {{#if data.race.name}}
+
+        {{!-- Select Subrace--}}
+        {{#if (objectLength data.race.data.subraces)}}
+        <label for='subrace'>Subrace:</label>
+        <select class='submit' name='subrace' id='subrace'>
+            <option value='{{data.race.subrace}}' selected hidden>{{data.race.subrace}}</option>
+            {{#with data.race.data.subraces as | subrace |}}
+            {{#each subrace}}
+            <option value='{{@key}}'>{{@key}}</option>
+            {{/each}}
+            {{/with}}
+        </select>
+        {{/if}}
+
+        {{!--Select Alignment--}}
+        <label for='alignment'>Alignment:</label>
+        <select class='submit' name='alignment' id='alignment'>
+            <option value='{{data.race.alignment}}' selected hidden>{{data.race.alignment}}</option>
+            {{#with info.alignment as | alignment |}}
+            {{#each alignment}}
+            <option value='{{@key}}'>{{@key}}</option>
+            {{/each}}
+            {{/with}}
+        </select>
+
+        {{!-- Race Characteristics--}}
+        <label for='size' name='size' id='size'>Size: {{data.race.size}}</label>
+        <label for='speed' name='speed' id='speed'>Speed: {{data.race.speed}}</label>
+        <label for='languages' name='languages' id='languages'>Languages:</label>
+        {{#each data.race.data.languages}}
+        <label>{{this}}</label>
+        {{/each}}
+        {{/if}}
+    </div>
 </div>
